--- a/daprdocs/data/components/state_stores/generic.yaml
+++ b/daprdocs/data/components/state_stores/generic.yaml
@@ -88,7 +88,7 @@
     query: false
 - component: Memcached
   link: setup-memcached
-  state: Beta
+  state: Stable
   version: v1
   since: "1.9"
   features:
